# robomasterWrapper

./: .gitignore  CHANGELOG.md  arm.py  gun.py  helperFuncs.py  pyproject.toml  readme.md  requirments.txt  robomasterpy.py  setup.py  test.py  test2.py
.github/workflows/: pypi-publish.yml
docs/: api_reference.md  contributor_checklist.md  coverage_matrix.md  migration_snake_case.md  quickstart.md  robomaster_capability_probe.md  student_guide.md  troubleshooting.md
robomasterwrapper/: camera.py  requirements.txt  requirments.txt  robomaster.py  robomasterpy.py
robowrap/: __init__.py  _sdk.py  arm.py  camera.py  gun.py  helperFuncs.py  modules.py  requirements.txt  robowrap.py  setup.py  viewer.py
robowrap/robowrap.egg-info/: PKG-INFO  requires.txt
scripts/: robomaster_capability_probe.py
tests/: fakes.py  test_public_api.py
