[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robowrap"
version = "0.8.0"
description = "A student-first wrapper around the DJI RoboMaster EP Python SDK."
readme = "readme.md"
requires-python = ">=3.7, <3.9"
authors = [
  { name = "Martin Davies", email = "mdavies@kellettschool.com" },
]
dependencies = [
  "robomaster",
  "simple_pid",
  "opencv-python==4.2.0.34; platform_system == 'Windows'",
  "opencv-python; platform_system != 'Windows'",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/robowrap/"
Repository = "https://github.com/MrDaviesKellett/robomasterWrapper"
PyPI = "https://pypi.org/project/robowrap/"
"Original RoboMaster SDK" = "https://github.com/dji-sdk/RoboMaster-SDK"

[project.optional-dependencies]
dev = [
  "build",
  "twine",
]

[tool.setuptools.packages.find]
include = ["robowrap*"]
