[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robowrap"
version = "0.8.5"
description = "A student-first wrapper around the DJI RoboMaster EP Python SDK."
readme = "readme.md"
requires-python = ">=3.9"
authors = [
  { name = "Martin Davies", email = "mdavies@kellettschool.com" },
]
dependencies = [
  "robomaster-sdk-modern>=1.1.1.76",
  "PySide6",
  "simple_pid",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://pypi.org/project/robowrap/"
Repository = "https://github.com/MrDaviesKellett/robomasterWrapper"
PyPI = "https://pypi.org/project/robowrap/"
"Modern RoboMaster SDK" = "https://pypi.org/project/robomaster-sdk-modern/"
"Modern RoboMaster SDK Repository" = "https://github.com/MrDaviesKellett/RoboMaster-SDK"
"Original RoboMaster SDK" = "https://github.com/dji-sdk/RoboMaster-SDK"

[project.optional-dependencies]
dev = [
  "build",
  "twine",
]

[tool.setuptools.packages.find]
include = ["robowrap*"]
